--- a/src/app/design/organisms/sidebar/sidebar.component.html
+++ b/src/app/design/organisms/sidebar/sidebar.component.html
@@ -22,6 +22,7 @@
               class="brand__icon"
               [ngSrc]="serverUrl + campaign()?.icon"
               alt="To Home Page"
+              priority
               [width]="32"
               [height]="32"
             />
