--- a/src/app/design/molecules/formly-file-field/formly-file-field.component.html
+++ b/src/app/design/molecules/formly-file-field/formly-file-field.component.html
@@ -1,14 +1,17 @@
 <div class="mb-3 {{ field.className }}" [class.d-none]="to.hidden">
-  <button
-    btn
-    class="file-field"
-    [class.disabled]="props.disabled"
-    [disabled]="!!props.disabled"
-    [kind]="buttonType"
-    [icon]="'upload'"
-    [text]="'Choose a file'"
-    (click)="onButtonClick($event)"
-  ></button>
+  <div class="d-flex flex-row align-items-center">
+    <button
+      btn
+      class="file-field"
+      [class.disabled]="props.disabled"
+      [disabled]="!!props.disabled"
+      [kind]="buttonType"
+      [icon]="'upload'"
+      [text]="'Click here or paste a file into the window'"
+      (focus)="formControl.markAsTouched()"
+      (click)="onButtonClick($event)"
+    ></button>
+  </div>
   <div class="mt-2">
     @if (selectedFileName) {
       <span class="me-3"> Currently Selected: </span>
@@ -24,7 +27,6 @@
   type="file"
   class="d-none"
   (change)="onFileSelect($event)"
-  [formControl]="formControl"
   [formlyAttributes]="field"
   [id]="props['name']"
   [name]="props['name']"
