--- a/src/app/design/organisms/image-carousel-card/image-carousel-card.component.html
+++ b/src/app/design/organisms/image-carousel-card/image-carousel-card.component.html
@@ -71,7 +71,7 @@
 
     <app-form
       class="form-card__form"
-      [model]="userModel"
+      [model]="userModel()"
       [fields]="createFields"
       [enctype]="'multipart/form-data'"
       [cancelButtonType]="'DARK'"
