--- a/src/app/design/templates/quest-overview/quest-overview.component.html
+++ b/src/app/design/templates/quest-overview/quest-overview.component.html
@@ -4,7 +4,7 @@
     <h1 class="quests__heading">Quests</h1>
 
     <div class="row mb-3 quests__create">
-      <a [routerLink]="createUrl()">
+      <a class="quests__create-link" [routerLink]="createUrl()">
         <button
           btn
           [kind]="'PRIMARY'"
