--- a/src/app/design/templates/quest-overview/quest-overview.component.scss
+++ b/src/app/design/templates/quest-overview/quest-overview.component.scss
@@ -1,15 +1,18 @@
-.quests{
-  &__heading{
+.quests {
+  &__heading {
     margin-bottom: var(--spacer-3);
     border-bottom: 1px solid var(--bs-gray);
   }
-  
-  &__table{
+
+  &__table {
     margin-bottom: var(--spacer-3);
   }
-  
-  &__tables{
+
+  &__tables {
     margin-bottom: var(--spacer-4);
   }
-  
+
+  &__create-link {
+    width: fit-content;
+  }
 }
