--- a/src/app/design/organisms/sidebar/sidebar.component.scss
+++ b/src/app/design/organisms/sidebar/sidebar.component.scss
@@ -52,6 +52,7 @@ a {
 }
 
 .entry {
+  &--active,
   :hover {
     color: var(--entry-hover-color);
     background-color: var(--entry-hover-bg-color);
