Design change to cards, they no longer have their own margin

--- a/src/app/design/templates/campaign-admin/campaign-admin.component.scss
+++ b/src/app/design/templates/campaign-admin/campaign-admin.component.scss
@@ -10,9 +10,18 @@
   &__user-group {
     height: fit-content;
   }
+
+  &__settings {
+    display: block;
+    margin-bottom: var(--spacer-4);
+    margin-top: var(--spacer-4);
+  }
 }
 
 .user-group {
+  margin-top: var(--spacer-4);
+  margin-bottom: var(--spacer-4);
+
   &__heading {
     text-align: center;
   }
