--- a/src/app/design/atoms/card/card.component.scss
+++ b/src/app/design/atoms/card/card.component.scss
@@ -1,17 +1,15 @@
-@import '/src/custom_bootstrap.scss';
+@import "/src/custom_bootstrap.scss";
 
-:host{
+:host {
   --card-bg-color: #{$card-bg};
   --card-flex-direction: column;
   --card-padding: var(--spacer-4);
 }
 
-.card{
+.card {
   background-color: var(--card-bg-color);
-  margin-top: var(--spacer-3);
-  margin-bottom: var(--spacer-3);
   padding: var(--card-padding);
   flex-direction: var(--card-flex-direction);
-  width:100%;
+  width: 100%;
   height: 100%;
 }
