--- a/src/app/design/atoms/card/card.component.scss
+++ b/src/app/design/atoms/card/card.component.scss
@@ -4,6 +4,7 @@
   --card-bg-color: #{$card-bg};
   --card-flex-direction: column;
   --card-padding: var(--spacer-4);
+  border-radius: var(--bs-border-radius);
 }
 
 .card {
