Fix double focus issue

--- a/src/app/design/templates/diaryentry/diaryentry.component.html
+++ b/src/app/design/templates/diaryentry/diaryentry.component.html
@@ -75,6 +75,7 @@
         <a
           class="nav-buttons__button nav-buttons__button--left"
           [routerLink]="nextDiaryentryUrl()"
+          tabindex="-1"
         >
           <button
             btn
@@ -93,6 +94,7 @@
         <a
           class="nav-buttons__button nav-buttons__button--right"
           [routerLink]="priorDiaryentryUrl()"
+          tabindex="-1"
         >
           <button
             btn
