More hotkeyable things

--- a/src/app/design/molecules/badge-list/badge-list.component.html
+++ b/src/app/design/molecules/badge-list/badge-list.component.html
@@ -41,6 +41,8 @@
       [valueProp]="optionValuePropVal"
       [badgeText]="badgeLabel"
       [cancelButtonType]="'DARK'"
+      [createHotkey]="hotkey()"
+      [showHotkeyTooltip]="showHotkeyTooltip()"
       (create)="onEntryCreate($event)"
     ></app-small-create-form>
   }
