--- a/src/app/design/organisms/encounter-card/encounter-card.component.scss
+++ b/src/app/design/organisms/encounter-card/encounter-card.component.scss
@@ -1,58 +1,5 @@
 @import "/src/screens.scss";
 
-.list {
-  padding-left: var(--spacer-0);
-  padding-right: var(--spacer-0);
-
-  &--loading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  &__buttons {
-    margin-bottom: var(--spacer-4);
-  }
-
-  &__encounter {
-    padding: unset;
-    border-radius: var(--bs-border-radius);
-    scroll-margin-top: calc(var(--spacer-5) * 2);
-
-    &:focus-within {
-      outline: var(--focus-outline);
-    }
-  }
-}
-
-.buttons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  margin-top: var(--spacer-4);
-  margin-bottom: var(--spacer-4);
-
-  &--first {
-    margin-top: unset;
-  }
-
-  &__button {
-    display: flex;
-
-    &--left {
-    }
-
-    &--right {
-      display: none;
-
-      @include media-breakpoint-up(md) {
-        display: flex;
-      }
-    }
-  }
-}
-
 .repeated-unit {
   padding: 0;
   scroll-margin-top: var(--spacer-5);
@@ -96,6 +43,14 @@
     &--edit {
       display: none;
       margin-bottom: var(--spacer-4);
+
+      @include media-breakpoint-up(md) {
+        display: unset;
+      }
+    }
+
+    &--arrow {
+      padding: var(--spacer-1) var(--spacer-0);
     }
   }
 }
