--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -2,47 +2,47 @@
   @if (!isUpdatingGlobally()) {
     <!-- Diaryentry - Encounters -->
     <div class="row list__inner">
+      @if (state() === "EDIT" && (canCreate() || canUpdate())) {
+        <div class="list__buttons list__buttons--first buttons">
+          @if (canCreate()) {
+            <button
+              btn
+              class="col-12 col-md-6 col-lg-4 buttons__button buttons__button--left"
+              title="Add Encounter to Diaryentry"
+              [kind]="'PRIMARY'"
+              [size]="'LARGE'"
+              [icon]="'plus'"
+              [text]="'Add First Encounter'"
+              [disabled]="isUpdatingAnything()"
+              (click)="addEmptyEncounterAtIndex(-1)"
+            ></button>
+          }
+          @if (canUpdate()) {
+            <button
+              btn
+              class="col-6 col-md-6 col-lg-4 buttons__button buttons__button--right"
+              title="Insert Cut Encounter"
+              [size]="'LARGE'"
+              [icon]="'file-import'"
+              [text]="'Insert Cut Encounter'"
+              [kind]="'SECONDARY'"
+              [disabled]="
+                isUpdatingAnything() ||
+                !isCutInProgress() ||
+                cutEncounterIndex() === 0
+              "
+              (click)="onInsertExcisedEncounter(-1 + 1)"
+            ></button>
+          }
+        </div>
+      }
+
       @for (entryEncounter of diaryEntryEncounters(); track entryEncounter) {
         @let isBeingCut = $index === cutEncounterIndex();
         @let isPriorBeingCut = $index === (cutEncounterIndex() ?? 0) - 1;
         @let disabled = isUpdatingAnything() || entryEncounter.isUpdating;
         @let isValidCutTarget =
           isCutInProgress() && (!isBeingCut || !isPriorBeingCut);
-
-        @if ($first && state() === "EDIT" && (canCreate() || canUpdate())) {
-          <div class="list__buttons list__buttons--first buttons">
-            @if (canCreate()) {
-              <button
-                btn
-                class="col-12 col-md-6 col-lg-4 buttons__button buttons__button--left"
-                title="Add Encounter to Diaryentry"
-                [kind]="'PRIMARY'"
-                [size]="'LARGE'"
-                [icon]="'plus'"
-                [text]="'Add First Encounter'"
-                [disabled]="isUpdatingAnything()"
-                (click)="addEmptyEncounterAtIndex(-1)"
-              ></button>
-            }
-            @if (canUpdate()) {
-              <button
-                btn
-                class="col-6 col-md-6 col-lg-4 buttons__button buttons__button--right"
-                title="Insert Cut Encounter"
-                [size]="'LARGE'"
-                [icon]="'file-import'"
-                [text]="'Insert Cut Encounter'"
-                [kind]="'SECONDARY'"
-                [disabled]="
-                  isUpdatingAnything() ||
-                  !isCutInProgress() ||
-                  cutEncounterIndex() === 0
-                "
-                (click)="onInsertExcisedEncounter(-1 + 1)"
-              ></button>
-            }
-          </div>
-        }
 
         <app-encounter-card
           #encounter
