Fix small issues

--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -58,6 +58,7 @@
           [canActivateCut]="!isCutInProgress()"
           [isCutInProgress]="isCutInProgress()"
           [disabled]="disabled"
+          [isUpdating]="entryEncounter.isUpdating"
           [isValidCutTarget]="isValidCutTarget"
           [isBeingCut]="cutEncounterIndex() === $index"
           [state]="state()"
