--- a/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
+++ b/src/app/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
@@ -17,7 +17,7 @@
   &__encounter {
     padding: unset;
     border-radius: var(--bs-border-radius);
-    scroll-margin-top: calc(var(--spacer-5) * 2);
+    scroll-margin-top: var(--spacer-3);
 
     &:focus-within {
       outline: var(--focus-outline);
