Fix datepicker button

--- a/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
+++ b/src/app/design/organisms/formly-datepicker-field/formly-datepicker-field.component.html
@@ -24,7 +24,8 @@
     <button
       btn
       class="btn btn-outline-light highlight"
-      [kind]="'NONE'"
+      [kind]="'SECONDARY'"
+      [icon]="'calendar'"
       [class.disabled]="!!props.disabled"
       (click)="datepickerInput.toggle()"
     >
