--- a/src/app/design/molecules/image-card/image-card.component.scss
+++ b/src/app/design/molecules/image-card/image-card.component.scss
@@ -107,7 +107,8 @@
 
   &__img-selector {
     border-radius: 50%;
-    padding: var(--spacer-1) var(--spacer-2);
+    width: var(--spacer-5);
+    height: var(--spacer-5);
     border: var(--bs-dark) 2px solid;
     background-color: var(--bs-secondary);
 
