Add scroll to top hotkey

--- a/src/app/design/organisms/page/page.component.html
+++ b/src/app/design/organisms/page/page.component.html
@@ -26,6 +26,8 @@
       "
       (click)="scrollToTop()"
       aria-label="Scroll to top"
+      [hotkey]="'t'"
+      (hotkeyPressed)="scrollToTop()"
     >
       <app-icon [icon]="'arrow-up-long'" />
     </button>
