--- a/src/app/design/templates/general-overview/general-overview.component.html
+++ b/src/app/design/templates/general-overview/general-overview.component.html
@@ -51,7 +51,7 @@
     <!-- Adding Item button -->
     @if (canCreate()) {
       <div class="overview__create">
-        <a [routerLink]="'create'">
+        <a [routerLink]="'create'" tabindex="-1">
           <button
             btn
             [icon]="'plus'"
