--- a/src/app/design/molecules/icon-card/icon-card.component.html
+++ b/src/app/design/molecules/icon-card/icon-card.component.html
@@ -13,7 +13,7 @@
   <!-- Body -->
   <div class="card-body">
     <div class="card-title">
-      <strong> {{ _title() | titlecase }} </strong>
+      <strong> {{ _title() }} </strong>
     </div>
 
     <div class="card-subtitle">
