Add hotkey to read button

--- a/src/app/design/templates/diaryentry/diaryentry.component.html
+++ b/src/app/design/templates/diaryentry/diaryentry.component.html
@@ -18,6 +18,8 @@
             [text]="
               state() === 'DISPLAY' ? 'Edit Encounters' : 'Read Diaryentry'
             "
+            [hotkey]="'r'"
+            (hotkeyPressed)="toggleState()"
             (click)="toggleState()"
           ></button>
         </div>
