Add aria labels

--- a/src/app/design/molecules/article-footer/article-footer.component.html
+++ b/src/app/design/molecules/article-footer/article-footer.component.html
@@ -5,6 +5,7 @@
 
   @if (showDelete()) {
     <app-confirmation-toggle-button
+      aria-label="Delete current page"
       [confirmationQuestion]="deleteMessage()"
       [icon]="'trash'"
       (confirm)="delete.emit()"
