--- a/src/app/design/templates/diaryentry/diaryentry.component.html
+++ b/src/app/design/templates/diaryentry/diaryentry.component.html
@@ -8,7 +8,12 @@
             [routerLink]="updateUrl()"
             tabindex="-1"
           >
-            <button btn [icon]="'pencil'" [kind]="'SECONDARY'"></button>
+            <button
+              aria-label="Edit Diaryentry"
+              btn
+              [icon]="'pencil'"
+              [kind]="'SECONDARY'"
+            ></button>
           </a>
           <button
             btn
