--- a/src/app/design/molecules/image-card/image-card.component.scss
+++ b/src/app/design/molecules/image-card/image-card.component.scss
@@ -73,7 +73,6 @@
     object-fit: cover;
     object-position: top;
     max-height: 7rem;
-    transition: 0.5s height;
   }
 
   &__img-close-btn {
@@ -83,6 +82,8 @@
     align-items: center;
     top: var(--spacer-2);
     right: var(--spacer-2);
+    width: var(--spacer-5);
+    height: var(--spacer-5);
     background-color: var(--bs-dark);
     --btn-pad: var(--spacer-2);
     padding: var(--btn-pad) var(--btn-pad) var(--btn-pad)
